--- a/src/main/res/layout/fragment_filter.xml
+++ b/src/main/res/layout/fragment_filter.xml
@@ -24,7 +24,7 @@
             android:background="@drawable/shape_corner"
             android:onClick="@{()->vm.clickDistance()}"
             android:padding="10dp"
-            android:text="@{vm.selectedDistances.name}"
+            android:text="@{vm.selectedDistances.toName}"
             android:transitionName="distance"
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_rating"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
             android:background="@drawable/shape_corner"
             android:onClick="@{()->vm.clickPrice()}"
             android:padding="10dp"
-            android:text="@{vm.selectedPrice.name}"
+            android:text="@{vm.selectedPrice.toName}"
             android:transitionName="price"
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_food"
             app:layout_constraintEnd_toStartOf="@+id/tv_rating"
