--- a/src/main/res/layout/fragment_filter_parent.xml
+++ b/src/main/res/layout/fragment_filter_parent.xml
@@ -9,9 +9,9 @@
             name="filterViewModel"
             type="com.sryang.screen_filter.FilterViewModel" />
 
-        <!--<variable
+        <variable
             name="selectNationViewModel"
-            type="com.example.travelmode.SelectNationViewModel" />-->
+            type="com.example.travelmode.SelectNationViewModel" />
 
     </data>
 
@@ -31,15 +31,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/nav_filter" />
-
-        <!--<FrameLayout
-            android:id="@+id/filter_container2"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />-->
 
         <Button
             android:id="@+id/button"
@@ -79,10 +70,10 @@
             app:layout_constraintStart_toEndOf="@+id/btn_this_loc"
             app:layout_constraintTop_toTopOf="@+id/btn_this_loc">
 
-            <!--<include
+            <include
                 layout="@layout/item_nation1"
                 app:name="@{selectNationViewModel.selected.name}"
-                app:res="@{selectNationViewModel.selected.res}" />-->
+                app:res="@{selectNationViewModel.selected.res}" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
