being migrated uilayer

--- a/src/main/res/layout/fragment_filter_parent.xml
+++ b/src/main/res/layout/fragment_filter_parent.xml
@@ -38,7 +38,7 @@
             android:layout_height="35dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/shape_corner"
-            android:onClick="@{()->filterViewModel.clickSearch()}"
+            android:onClick="@{()->filterViewModel.searchFilterRestaurant()}"
             android:text="재검색"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_this_loc"
@@ -51,7 +51,7 @@
             android:layout_width="80dp"
             android:layout_height="35dp"
             android:background="@drawable/shape_corner"
-            android:onClick="@{()->filterViewModel.clickThisArea()}"
+            android:onClick="@{()->filterViewModel.searchBoundRestaurant()}"
             android:text="이 지역 검색"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
