--- a/src/main/res/layout/fragment_food_filter.xml
+++ b/src/main/res/layout/fragment_food_filter.xml
@@ -7,6 +7,10 @@
             name="vm"
             type="com.sryang.screen_filter.FilterViewModel" />
 
+        <variable
+            name="selectedRestaurantType"
+            type="java.util.ArrayList&lt;RestaurantType&gt;" />
+
         <import type="com.example.torang_core.data.model.RestaurantType" />
     </data>
 
@@ -36,7 +40,7 @@
         <TextView
             android:id="@+id/textView4"
             style="@style/Filter"
-            select="@{vm.selectedFoods.contains(RestaurantType.KOREAN)}"
+            select="@{selectedRestaurantType.contains(RestaurantType.KOREAN)}"
             android:onClick='@{()->vm.setFood(RestaurantType.KOREAN)}'
             android:text="한식"
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_food"
@@ -47,7 +51,7 @@
         <TextView
             android:id="@+id/textView5"
             style="@style/Filter"
-            select="@{vm.selectedFoods.contains(RestaurantType.CHINESE)}"
+            select="@{selectedRestaurantType.contains(RestaurantType.CHINESE)}"
             android:onClick='@{()->vm.setFood(RestaurantType.CHINESE)}'
             android:text="중식"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
@@ -58,7 +62,7 @@
         <TextView
             android:id="@+id/textView6"
             style="@style/Filter"
-            select="@{vm.selectedFoods.contains(RestaurantType.FOREIGN)}"
+            select="@{selectedRestaurantType.contains(RestaurantType.FOREIGN)}"
             android:onClick='@{()->vm.setFood(RestaurantType.FOREIGN)}'
             android:text="양식"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
@@ -69,7 +73,7 @@
         <TextView
             android:id="@+id/textView9"
             style="@style/Filter"
-            select="@{vm.selectedFoods.contains(RestaurantType.JAPANESE)}"
+            select="@{selectedRestaurantType.contains(RestaurantType.JAPANESE)}"
             android:onClick='@{()->vm.setFood(RestaurantType.JAPANESE)}'
             android:text="일식"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
@@ -80,7 +84,7 @@
         <TextView
             android:id="@+id/textView10"
             style="@style/Filter"
-            select="@{vm.selectedFoods.contains(RestaurantType.DRINK)}"
+            select="@{selectedRestaurantType.contains(RestaurantType.DRINK)}"
             android:onClick='@{()->vm.setFood(RestaurantType.DRINK)}'
             android:text="주점"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
