--- a/src/main/res/layout/fragment_rating_filter.xml
+++ b/src/main/res/layout/fragment_rating_filter.xml
@@ -7,6 +7,10 @@
             name="vm"
             type="com.sryang.screen_filter.FilterViewModel" />
 
+        <variable
+            name="ratings"
+            type="java.util.ArrayList&lt;Ratings&gt;" />
+
         <import type="com.example.torang_core.data.model.Ratings" />
     </data>
 
@@ -27,7 +31,7 @@
             android:background="@drawable/shape_corner"
             android:onClick="onBackPressed"
             android:padding="10dp"
-            android:text="@{vm.ratings}"
+            android:text="평점"
             android:transitionName="rating"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +40,7 @@
         <TextView
             android:id="@+id/textView4"
             style="@style/Filter"
-            select="@{vm.selectedRatings.contains(Ratings.ONE)}"
+            select="@{ratings.contains(Ratings.ONE)}"
             android:onClick="@{()->vm.setSelectRatings(Ratings.ONE)}"
             android:text="1점대"
             app:layout_constraintBaseline_toBaselineOf="@+id/tv_price"
@@ -47,7 +51,7 @@
         <TextView
             android:id="@+id/textView5"
             style="@style/Filter"
-            select="@{vm.selectedRatings.contains(Ratings.TWO)}"
+            select="@{ratings.contains(Ratings.TWO)}"
             android:onClick="@{()->vm.setSelectRatings(Ratings.TWO)}"
             android:text="2점대"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
@@ -58,7 +62,7 @@
         <TextView
             android:id="@+id/textView6"
             style="@style/Filter"
-            select="@{vm.selectedRatings.contains(Ratings.THREE)}"
+            select="@{ratings.contains(Ratings.THREE)}"
             android:onClick="@{()->vm.setSelectRatings(Ratings.THREE)}"
             android:text="3점대"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
@@ -69,7 +73,7 @@
         <TextView
             android:id="@+id/textView9"
             style="@style/Filter"
-            select="@{vm.selectedRatings.contains(Ratings.FOUR)}"
+            select="@{ratings.contains(Ratings.FOUR)}"
             android:onClick="@{()->vm.setSelectRatings(Ratings.FOUR)}"
             android:text="4점대"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
@@ -80,7 +84,7 @@
         <TextView
             android:id="@+id/textView10"
             style="@style/Filter"
-            select="@{vm.selectedRatings.contains(Ratings.FIVE)}"
+            select="@{ratings.contains(Ratings.FIVE)}"
             android:onClick="@{()->vm.setSelectRatings(Ratings.FIVE)}"
             android:text="5점대"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
