--- a/src/main/res/layout/fragment_filter_parent.xml
+++ b/src/main/res/layout/fragment_filter_parent.xml
@@ -39,6 +39,7 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/shape_corner"
             android:onClick="@{()->filterViewModel.searchFilterRestaurant()}"
+            android:padding="0dp"
             android:text="재검색"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_this_loc"
@@ -52,7 +53,9 @@
             android:layout_height="35dp"
             android:background="@drawable/shape_corner"
             android:onClick="@{()->filterViewModel.searchBoundRestaurant()}"
+            android:padding="0dp"
             android:text="이 지역 검색"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
             app:layout_constraintHorizontal_bias="0.5"
